<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/network_offline_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image_wifi_connection"
            android:layout_width="34dp"
            android:layout_height="41dp"
            android:contentDescription="@string/network_offline_image_description"
            app:srcCompat="@drawable/ic_baseline_wifi_off_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/network_offline_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_offline_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/network_offline_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_offline_subtitle"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>